--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
     <title>instrumentacion</title>
 </head>
 <body>
-<div id="app"></div>
+<div id="app" class="bg-stone-100 h-screen"></div>
 <script src="./src/main.ts" type="module"></script>
 </body>
 </html>
